--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,9 +13,10 @@
     <color name="lightgreen3">#E2F6E3</color>
     <color name="midgreen">#AAE1BC</color>
     <color name="darkmidgreen">#90CDA4</color>
-    <color name="birdcolor">#a4cd39</color>
-    <color name="lightmidgreen">#CCF3D2</color>
+    <color name="birdcolor">#8FCD39</color>
+    <color name="lightbirdcolor">#F2F6ED</color>
     <color name="darkgreen">#0C805F</color>
+    <color name="lightmidgreen">#CCF3D2</color>
     <color name="imagesplash">#e9e9e9</color>
     <color name="gray">#545E5E</color>
     <color name="lightblue">#46A8F6</color>
