--- a/app/src/main/res/layout/activity_msregister.xml
+++ b/app/src/main/res/layout/activity_msregister.xml
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/sd4"
+        android:id="@+id/ms_register_email"
         android:backgroundTint="@color/darkgreen"
         android:hint="user email"
         />
@@ -43,6 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/sd4"
+        android:id="@+id/ms_register_parlor_name"
         android:backgroundTint="@color/darkgreen"
         android:hint="Parlour Name"
         />
@@ -50,6 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/sd4"
+        android:id="@+id/ms_register_parlor_address"
         android:backgroundTint="@color/darkgreen"
         android:hint="Parlour Address"
         />
@@ -57,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/sd4"
+        android:id="@+id/ms_register_parlor_password"
         android:inputType="textPassword"
         android:backgroundTint="@color/darkgreen"
         android:hint="password"
