--- a/app/src/main/res/layout/activity_msedit_profile.xml
+++ b/app/src/main/res/layout/activity_msedit_profile.xml
@@ -28,6 +28,7 @@
                 android:gravity="center_vertical">
 
                 <ImageButton
+                    android:id="@+id/profile_backIB"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
