--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,52 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightgreen"
-    >
-        <LinearLayout
-            android:id="@+id/linearLayout"
+    android:background="@color/lightgreen">
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/homecard_bg"
+        android:gravity="left"
+        android:orientation="vertical"
+        android:paddingVertical="@dimen/sd20"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_margin="20dp"
+            android:src="@drawable/ic_logo_aen" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:paddingVertical="@dimen/sd20"
-            android:background="@drawable/homecard_bg"
-            android:gravity="left"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_marginHorizontal="20dp"
+            android:gravity="start"
+            android:text="Hello again,"
+            android:textColor="@color/gray"
+            android:textSize="@dimen/sd16"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_margin="20dp"
-                android:src="@drawable/ic_logo_aen" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:text="Hello again,"
-                android:textColor="@color/gray"
-                android:layout_marginHorizontal="20dp"
-                android:textSize="@dimen/sd16"
-                android:textStyle="bold" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:text="Welcome"
-                android:layout_marginVertical="@dimen/sd6"
-                android:layout_marginHorizontal="20dp"
-                android:textColor="@color/black"
-                android:textSize="@dimen/sd20"
-                android:textStyle="bold" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="@dimen/sd6"
+            android:gravity="start"
+            android:text="Welcome"
+            android:textColor="@color/black"
+            android:textSize="@dimen/sd20"
+            android:textStyle="bold" />
 
 
-        </LinearLayout>
+    </LinearLayout>
 
 
     <androidx.cardview.widget.CardView
@@ -58,7 +59,8 @@
         android:backgroundTint="@color/white"
         android:elevation="20dp"
         app:cardCornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    
+        app:layout_constraintBottom_toTopOf="@+id/loginerrorTV"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
@@ -70,11 +72,11 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
-            android:paddingHorizontal="@dimen/sd20"
-            android:paddingVertical="@dimen/sd12"
-            >
 
-           <!-- <ScrollView
+            android:paddingHorizontal="@dimen/sd20"
+            android:paddingVertical="@dimen/sd12">
+
+            <!-- <ScrollView
 
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -85,6 +87,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -153,12 +156,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/sd4"
-                    android:imeOptions="actionDone"
-                    android:maxLines="1"
-                    android:inputType="textPassword"
                     android:background="@drawable/loginedittextbg"
                     android:drawableEnd="@drawable/ic_padlock"
                     android:hint="***********"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
                     android:padding="@dimen/sd12" />
 
                 <TextView
@@ -187,44 +190,46 @@
                     android:textColor="@color/darkgreen"
                     android:textSize="@dimen/sd16"
                     android:textStyle="bold" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="OR"
                     android:layout_marginTop="@dimen/sd6"
+                    android:text="OR"
                     android:textColor="@color/darkgreen"
-                    android:textStyle="bold"
                     android:textSize="@dimen/sd12"
-                    />
+                    android:textStyle="bold" />
+
                 <LinearLayout
+                    android:id="@+id/signupforparlorll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:id="@+id/signupforparlorll"
                     android:layout_marginTop="6dp"
-                    android:orientation="horizontal"
-                    >
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/sd4"
                         android:layout_marginBottom="@dimen/sd10"
                         android:text="want to manage your parlour?"
-                        android:layout_marginHorizontal="@dimen/sd4"
                         android:textColor="#15291D"
-                        android:textSize="@dimen/sd12"
-                        />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="@dimen/sd10"
-                    android:gravity="center"
+                        android:textSize="@dimen/sd12" />
 
-                    android:text="Signup for My Parlour"
-                    android:textColor="@color/darkgreen"
-                    android:textSize="@dimen/sd14"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="@dimen/sd10"
+                        android:gravity="center"
+
+                        android:text="Signup for My Parlour"
+                        android:textColor="@color/darkgreen"
+                        android:textSize="@dimen/sd14"
+                        android:textStyle="bold" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -251,7 +256,7 @@
                         android:background="@color/darkgreen" />
                 </LinearLayout>
             </LinearLayout>
-           <!-- </ScrollView>-->
+            <!-- </ScrollView>-->
 
             <TextView
                 android:id="@+id/textView"
@@ -286,5 +291,48 @@
         <include layout="@layout/layout_prelogin" />-->
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/sd20"
+        android:gravity="center"
+        android:id="@+id/login_pb"
+        android:layout_margin="@dimen/sd20"
+        android:background="@color/lightbirdcolor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        >
+
+        <ProgressBar
+            android:layout_width="100dp"
+            android:layout_margin="@dimen/sd6"
+            android:layout_height="100dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Loading"
+            android:textStyle="bold"
+            android:textColor="@color/darkgreen"
+            android:textSize="@dimen/sd14"/>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/loginerrorTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/red"
+        android:padding="@dimen/sd6"
+        android:text="Error Message"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
