--- a/app/src/main/res/layout/activity_msregister.xml
+++ b/app/src/main/res/layout/activity_msregister.xml
@@ -1,128 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingHorizontal="@dimen/sd12"
-    android:gravity="center"
     tools:context=".myspalon.MSRegisterActivity">
+
+    <LinearLayout
+        android:id="@+id/linearLayout20"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingHorizontal="@dimen/sd12"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        tools:context=".myspalon.MSRegisterActivity">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="100dp"
+                android:layout_margin="@dimen/sd8"
+                android:src="@drawable/ae_bird" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lemon"
+                android:text="My Parlour"
+                android:textColor="@color/birdcolor"
+                android:textSize="@dimen/sd18"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/ms_register_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/sd4"
+            android:backgroundTint="@color/darkgreen"
+            android:hint="user email" />
+
+        <EditText
+            android:id="@+id/ms_register_parlor_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/sd4"
+            android:backgroundTint="@color/darkgreen"
+            android:hint="Parlour Name" />
+
+        <EditText
+            android:id="@+id/ms_register_parlor_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/sd4"
+            android:backgroundTint="@color/darkgreen"
+            android:hint="Parlour Address" />
+
+        <EditText
+            android:id="@+id/ms_register_parlor_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/sd4"
+            android:backgroundTint="@color/darkgreen"
+            android:hint="password"
+            android:inputType="textPassword" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/sd4"
+            android:backgroundTint="@color/darkgreen"
+            android:hint="re-enter password"
+            android:inputType="textPassword" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/sd4"
+            android:gravity="right"
+            android:text="forgot password ?"
+            android:textColor="@color/darkgreen"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_signup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_round_bg_darkgreen"
+            android:backgroundTint="@color/birdcolor"
+            android:drawableRight="@drawable/ic_arrow_forward_white"
+            android:gravity="center"
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="12dp"
+            android:text="Sign Up"
+            android:textAllCaps="true"
+            android:textColor="@color/darkgreen"
+            android:textSize="@dimen/sd16"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/sd6"
+            android:layout_marginVertical="@dimen/sd8"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_weight="1"
+                android:background="@color/darkgreen" />
+
+            <ImageView
+                android:layout_width="@dimen/sd30"
+                android:layout_height="@dimen/sd30"
+                android:layout_margin="@dimen/sd6"
+                android:src="@drawable/ic_logo_aen" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_weight="1"
+                android:background="@color/darkgreen" />
+        </LinearLayout>
+
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/sd20"
         android:gravity="center"
-        android:orientation="horizontal"
-        >
-        <ImageView
-            android:layout_width="120dp"
-            android:layout_height="100dp"
-            android:src="@drawable/ae_bird"
-            android:layout_margin="@dimen/sd8"
-            />
+        android:id="@+id/ms_register_pb"
+        android:layout_margin="@dimen/sd20"
+        android:background="@color/lightbirdcolor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5">
+<ProgressBar
+    android:layout_width="100dp"
+    android:layout_margin="@dimen/sd6"
+    android:layout_height="100dp"
+    />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="My Parlour"
+            android:text="Loading"
             android:textStyle="bold"
-            android:textColor="@color/birdcolor"
-            android:fontFamily="@font/lemon"
-            android:textSize="@dimen/sd18"
-            />
-
+            android:textColor="@color/darkgreen"
+            android:textSize="@dimen/sd14"/>
     </LinearLayout>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sd4"
-        android:id="@+id/ms_register_email"
-        android:backgroundTint="@color/darkgreen"
-        android:hint="user email"
-        />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sd4"
-        android:id="@+id/ms_register_parlor_name"
-        android:backgroundTint="@color/darkgreen"
-        android:hint="Parlour Name"
-        />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sd4"
-        android:id="@+id/ms_register_parlor_address"
-        android:backgroundTint="@color/darkgreen"
-        android:hint="Parlour Address"
-        />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sd4"
-        android:id="@+id/ms_register_parlor_password"
-        android:inputType="textPassword"
-        android:backgroundTint="@color/darkgreen"
-        android:hint="password"
-        />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sd4"
-        android:inputType="textPassword"
-        android:backgroundTint="@color/darkgreen"
-        android:hint="re-enter password"
-        />
     <TextView
+        android:id="@+id/MSregistererrorTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        android:layout_marginVertical="@dimen/sd4"
-        android:text="forgot password ?"
-        android:textColor="@color/darkgreen"
+        android:background="@color/red"
+        android:padding="@dimen/sd6"
+        android:text="Error Message"
+        android:textColor="@color/white"
         android:textStyle="bold"
-        />
-    <TextView
-        android:id="@+id/tv_signup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/button_round_bg_darkgreen"
-        android:drawableRight="@drawable/ic_arrow_forward_white"
-        android:gravity="center"
-        android:paddingHorizontal="30dp"
-        android:paddingVertical="12dp"
-        android:text="Sign Up"
-        android:textAllCaps="true"
-        android:backgroundTint="@color/birdcolor"
-        android:textColor="@color/darkgreen"
-        android:textSize="@dimen/sd16"
-        android:textStyle="bold" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/sd6"
-        android:gravity="center"
-        android:layout_marginVertical="@dimen/sd8"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_weight="1"
-            android:background="@color/darkgreen" />
-
-        <ImageView
-            android:layout_width="@dimen/sd30"
-            android:layout_height="@dimen/sd30"
-            android:layout_margin="@dimen/sd6"
-            android:src="@drawable/ic_logo_aen" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_weight="1"
-            android:background="@color/darkgreen" />
-    </LinearLayout>
-</LinearLayout>
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout20" />
+</androidx.constraintlayout.widget.ConstraintLayout>
